@@ -4,6 +4,7 @@
     because 'make' seems to be failing to build the programs correctly
     when they are extra's. Its probably a configure problem that needs to
     be solved.
+    * tgdb now works on windows XP in cygwin: Fixed creation of home directory.
 
 03/29/2003 Bob Rossi <bob_rossi@cox.net>
 
